<resources>
    <string name="app_name">Pengelolaan TA </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo_unand">logo_unand</string>
    <string name="sidang">Sidang</string>
    <string name="seminar">Seminar</string>
    <string name="jadwal">Jadwal</string>
    <string name="permintaan">Permintaan</string>
    <string name="halo">Halo</string>
    <string name="nama">nama</string>
    <string name="kabar">Bagaimana kabar anda?</string>
    <string name="foto">foto</string>
    <string name="home">Home</string>
    <string name="ta">Permintaan TA</string>
    <string name="mahasiswa">Mahasiswa TA</string>
    <string name="profil">Profil</string>
    <string name="penguji">Tetapkan Penguji</string>
    <string name="detail_sidang">Detail Sidang</string>
    <string name="detail_seminar">Detail Seminar</string>
    <string name="detail_ta">Detail Tugas Akhir</string>
    <string name="logbook_ta">Logbook Tugas Akhir</string>
    <string name="peserta_seminar">Peserta Seminar</string>
    <string name="permintaan_ta">Permintaan Tugas Akhir</string>
    <string name="tanggal">Hari/Tanggal: Selasa 22 September 2022</string>
    <string name="pukul">Pukul : 09.00 WIB - Selesai</string>
    <string name="tempat">Tempat : Ruang Seminar Jurusan SI</string>
    <string name="dosen">Dosen : Husnil Kamil, MT</string>
    <string name="judul">Judul : Penerapan Dashboard Pada Restoran Kentang</string>
    <string name="kentang">Penerapan Dashboard Pada Restoran Kentang</string>
    <string name="pembimbing">Pembimbing : Husnil Kamil, MT</string>
    <string name="deskripsi">Deskripsi Singkat</string>
    <string name="desc">Lorem Ipsum has been the industry</string>
    <string name="bjorka">Bjorka</string>
    <string name="tambah">Tambahkan</string>
    <string name="seminar2">Form Penguji Seminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boby_darmawan">Boby Darmawan</string>
    <string name="nim">2011522023</string>
    <string name="schedule">Senin, 1 januari 2023</string>
    <string name="time">10.00</string>
    <string name="location">Ruang Seminar SI</string>
    <string name="vallen">Vallen Adithya Reksana</string>
    <string name="nim2">2011522017</string>
    <string name="jadwal2">Hari/Tanggal sidang</string>
    <string name="hari">Selasa/22 September 2022</string>
    <string name="waktu">Pukul</string>
    <string name="jam">10.00 WIB</string>
    <string name="seminar_jurusan">Ruang Seminar Jurusan Sistem Informasi</string>
    <string name="tempat2">Tempat</string>
    <string name="judul2">judul</string>
    <string name="dosbing">Dosen Pembimbing</string>
    <string name="pak_husnil">Husnil Kamil, M.T</string>
    <string name="dospeng">Dosen Penguji</string>
    <string name="Nama">Nama</string>
    <string name="Nim">Nim</string>
    <string name="NIM">NIM</string>
    <string name="judul_tugas_akhir">Judul Tugas Akhir</string>
    <string name="dospeng1">Dosen Penguji 1</string>
    <string name="dospeng2">Dosen Penguji 2</string>
    <string name="wib">10:00 WIB</string>
    <string name="logout">Logout</string>

</resources>