<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pabu"
    tools:context=".DetailSidang">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="419dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/tosca"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="418dp"
                android:layout_height="481dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TableLayout
                            android:layout_width="345dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="44dp">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="@string/NIM"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/nim_sidang"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="Jenis Kelamin"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/gender"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="@string/jadwal2"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/tanggal_sidang"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="Tanggal mulai TA"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/tanggal_ta"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=" "
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="Judul Sidang"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/judul_sidang"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="Dosen Penguji 1"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/dospeng1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="Dosen Penguji 2"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/dospeng2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text=""
                                    android:textSize="16sp" />
                            </TableRow>
                        </TableLayout>

                        <Button
                            android:id="@+id/btnPenguji"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:layout_marginLeft="125dp"
                            android:layout_marginBottom="120dp"
                            android:background="@drawable/roundstyle"
                            android:backgroundTint="@color/tosca"
                            android:padding="16sp"
                            android:text="@string/penguji"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nama_peserta_sidang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bjorka"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="144dp"
                android:layout_height="159dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/foto" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>